Bug 308462 - Request is not aborted when tokens refreshing fails
Summary: Request is not aborted when tokens refreshing fails
Status: RESOLVED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 0.4.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-15 21:29 UTC by Adam Burton
Modified: 2012-10-19 13:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Burton 2012-10-15 21:29:29 UTC
After setting up a Google Calendar and Tasks resource I navigated to my google account and revoked access to akonadi. I returned to the Google Calendar and Tasks configuration dialog via Akonadi Configuration and a dialog appears stating "The account is invalid.". I click ok and a dialog reappears preventing me from solving the problem. This also occurs if I add a new resource.

Reproducible: Always

Steps to Reproduce:
1. Create a valid google calendar and tasks resource.
2. Navigate to google
3. Revoke Akonadi's account access.
4. Navigate to Akonadi Configration
5. Select the resource created earlier.
6. Click modify.
Actual Results:  
A dialog appears stating "The account is invalid.". Click OK and the dialog reappears preventing the user from solving the problem or navigating away.

Expected Results:  
After clicking OK the UI should not prevent the user from removing the account, adding another, or selecting a different account. Reselecting the same account should continue to indicate it is invalid.

A work around is to open the google contacts configuration and remove the invalid account from there. Additionally the google contacts configuration should also indicate the account is invalid (currently it displays a notification popup from desktop notification UI, but nothing within the configuration itself indicates there is a problem).
Comment 1 Daniel Vrátil 2012-10-19 13:54:31 UTC
Git commit e6ec13f66136acee43795cac32e2341341735e9d by Dan Vrátil.
Committed on 19/10/2012 at 15:52.
Pushed by dvratil into branch 'LibKGAPI/0.4'.

Don't emit Auth::authenticated() when tokens refresh fails

This prevents AccessManager to resubmit the cache of request, which
would lead to endless loop of submit-fail-submit-fail...
FIXED-IN: 0.4.3

M  +1    -0    libkgapi/auth_p.cpp

http://commits.kde.org/akonadi-google/e6ec13f66136acee43795cac32e2341341735e9d