Don't emit Auth::authenticated() when tokens refresh fails

This prevents AccessManager to resubmit the cache of request, which
would lead to endless loop of submit-fail-submit-fail...

BUG: 308462
FIXED-IN: 0.4.3